<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <groupId>com.jetdrone</groupId>
    <artifactId>yoke-project</artifactId>
    <version>2.0.22-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Yoke</name>
    <description>Yoke a middleware framework for Vert.x 2</description>
    <url>http://pmlopes.github.io/yoke</url>

    <developers>
        <developer>
            <id>pmlopes</id>
            <name>Paulo Lopes</name>
            <email>pmlopes@gmail.com</email>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name>silviucm</name>
        </contributor>
        <contributor>
            <name>David Dossot</name>
            <email>david@dossot.net</email>
        </contributor>
        <contributor>
            <name>panzhangwang</name>
        </contributor>
        <contributor>
            <name>Xiaochun Lu</name>
            <email>luxiaochun_1111@hotmail.com</email>
        </contributor>
        <contributor>
            <name>Valeri Nistor</name>
            <email>nistor.valeri@gmail.com</email>
        </contributor>
        <contributor>
            <name>Nolan Darilek</name>
        </contributor>
        <contributor>
            <name>Danny Kirchmeier</name>
            <email>danny@kirchmeier.us</email>
        </contributor>
        <contributor>
            <name>Bean</name>
        </contributor>
        <contributor>
            <name>tv</name>
            <email>tv@shackspace.de</email>
        </contributor>
        <contributor>
            <name>Sorin Costea</name>
        </contributor>
        <contributor>
            <name>ixasuhan</name>
        </contributor>
    </contributors>

    <issueManagement>
        <url>https://github.com/pmlopes/yoke/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <ciManagement>
        <url>https://travis-ci.org/pmlopes/yoke</url>
        <system>Travis CI</system>
    </ciManagement>

    <scm>
        <url>https://github.com/pmlopes/yoke</url>
        <connection>scm:git:git://github.com/pmlopes/yoke.git</connection>
        <developerConnection>scm:git:git@github.com:pmlopes/yoke.git</developerConnection>
    </scm>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <distribution>repo</distribution>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
        </license>
    </licenses>

    <properties>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.testTarget>1.8</maven.compiler.testTarget>
        <maven.compiler.testSource>1.8</maven.compiler.testSource>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Plugin versions -->
        <cobertura.plugin.version>2.6</cobertura.plugin.version>
        <!-- Dependency versions -->
        <vertx.version>2.1.5</vertx.version>
        <!--<groovy.version>2.3.3</groovy.version>-->
        <!--&lt;!&ndash; Groovy compiler &ndash;&gt;-->
        <!--<groovy.eclipse.batch.version>2.3.7-01</groovy.eclipse.batch.version>-->
        <!--<groovy.eclipse.compiler.version>2.9.1-01</groovy.eclipse.compiler.version>-->
    </properties>

    <distributionManagement>
        <site>
            <id>website</id>
            <url>http://pmlopes.github.io/yoke</url>
        </site>
    </distributionManagement>

    <profiles>
        <profile>
            <id>examples</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>examples/benchmark</module>
                <module>examples/cluster-benchmark</module>
                <module>examples/dojo-reststore</module>
                <module>examples/form-auth</module>
                <!--<module>examples/groovy</module>-->
                <module>examples/javascript</module>
                <module>examples/kitcms</module>
                <module>examples/mozilla-persona</module>
                <module>examples/session-store</module>
                <module>examples/swagger-petstore</module>
                <module>examples/techempower</module>
        </modules>
        </profile>
    </profiles>

    <modules>
        <module>framework</module>

        <module>middleware/helmet</module>
        <module>middleware/jersey</module>
        <module>middleware/pac4j</module>
        <module>middleware/reststore</module>
        <module>middleware/swagger</module>
        <module>middleware/toobusy</module>

        <module>engine/handlebars</module>
        <module>engine/jade</module>
        <module>engine/mvel</module>
        <module>engine/thymeleaf</module>

        <module>store/redis</module>
        <module>store/mongodb</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.10</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.5.3</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
                <plugin>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>1.3.1</version>
                    <executions>
                        <execution>
                            <id>enforce-java</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireJavaVersion>
                                        <version>1.8</version>
                                    </requireJavaVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.sonar</groupId>
                    <artifactId>sonar-maven3-plugin</artifactId>
                    <version>4.5.2</version>
                </plugin>
                <plugin>
                    <groupId>com.amashchenko.maven.plugin</groupId>
                    <artifactId>gitflow-maven-plugin</artifactId>
                    <version>1.0.8</version>
                    <configuration>
                        <installProject>false</installProject>
                        <gitFlowConfig>
                            <productionBranch>master</productionBranch>
                            <developmentBranch>develop</developmentBranch>
                            <featureBranchPrefix>feature/</featureBranchPrefix>
                            <releaseBranchPrefix>release/</releaseBranchPrefix>
                            <hotfixBranchPrefix>hotfix/</hotfixBranchPrefix>
                            <supportBranchPrefix>support/</supportBranchPrefix>
                            <versionTagPrefix/>
                        </gitFlowConfig>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.3</version>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.10.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>2.7</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>cobertura-maven-plugin</artifactId>
                    <version>${cobertura.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
